added a parahraph of text

--- a/helloworld.html
+++ b/helloworld.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Sitio web perron</h1>
     <p>Greetings beautiful People</p>
+    <p>Por favor cuéntame que te pareció el curso</p>
 </body>
 </html>
