commit desde VS COde 2

--- a/helloworld.html
+++ b/helloworld.html
@@ -6,7 +6,7 @@
     <title>Hello Platzi</title>
 </head>
 <body>
-    <h1>Sitio web perron</h1>
+    <h1>Sitio web perronsotote</h1>
     <p>Greetings beautiful People</p>
     <p>Por favor cuéntame que te pareció el curso</p>
 </body>
